--- a/Neumorphic Music App/css/style.css
+++ b/Neumorphic Music App/css/style.css
@@ -120,12 +120,14 @@ body {
     line-height: 171px;
     color: #1C1C1C;
 }
-.screen1 {
-    background: linear-gradient(180deg, #373E44 -100%, #191B1F 100%);
-    border-radius: 35px;
+
+.screen1 , .screen2{
     width: 428px;
     height: 860px;
     margin-top: 20px;
+    background: linear-gradient(180deg, #373E44 -100%, #191B1F 100%);
+    box-shadow: 10px 10px 40px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
 }
 
 .screen1-container {
